Temporary fix for alert coming up behind profile sidebar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,6 +30,10 @@ body {
 	margin-top: -7px;
 }
 
+.alert {
+	margin: 0 5px 0 325px;
+}
+
 #profile-sidebar {
 	width: 320px;
 	background-color: #f0f0f0;
